Fixed z-index bug on picker dropdown

--- a/src/stylesheets/filechooser/data-type-picker.sass
+++ b/src/stylesheets/filechooser/data-type-picker.sass
@@ -23,6 +23,7 @@ $data-type-picker-height: $data-type-picker-circle-width + 10px
 
 .data-type-picker-dropdown
   position: relative
+  z-index: 2
   left: 12px
   padding: 0px
   background-color: $tab-bg-color
