--- a/src/stylesheets/filechooser/file-type-picker.sass
+++ b/src/stylesheets/filechooser/file-type-picker.sass
@@ -32,6 +32,7 @@ $file-type-picker-height: $file-type-icon-height + 4px
 
 .file-type-picker-dropdown
   position: relative
+  z-index: 2
   left: 12px
   padding: 0px
   background-color: $tab-bg-color
