--- a/src/stylesheets/filechooser/io-picker.sass
+++ b/src/stylesheets/filechooser/io-picker.sass
@@ -30,7 +30,7 @@
 
     .no-inputs
       text-align: center
-      padding: 5px
+      padding: 10px
       color: rgba($tab-font-color, 0.3)
 
     .inputs
@@ -43,7 +43,7 @@
           font-size: 12px
           font-weight: bold
           &:hover
-            transform: scale(1.25)
+            transform: scale(1.5)
 
         .data-type
           display: inline-block
